# fluux-messenger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  SUPPORTED_XEPS.md  docker-compose.yml  fluux-messenger.doap  package-lock.json  package.json  playwright.scroll.config.ts  playwright.ux.config.ts  playwright.video.config.ts  renovate.json  tsconfig.base.json
.claude/skills/perf-stress-ui/: SKILL.md
.devcontainer/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  playwright-cache.yml  release.yml  windows-test-build.yml
apps/fluux/: demo.html  eslint.config.js  index.html  package.json  pretext-spike.html  spike.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/fluux/flatpak/: com.processone.fluux.metainfo.xml  com.processone.fluux.yaml
apps/fluux/scripts/: pretext-spike-check.mjs  tauri-build.sh  tauri-dev.sh  tauri-install.sh
apps/fluux/src/: App.reconnect.test.tsx  App.routes.test.tsx  App.tsx  demo.tsx  index.css  main.tsx  sw.ts  test-setup.ts  vite-env.d.ts
apps/fluux/src-tauri/: Cargo.toml  build.rs  sign-windows.ps1  tauri.conf.json  tauri.dev.conf.json  tauri.release-signing.conf.json  verify-windows-signatures.ps1
apps/fluux/src-tauri/capabilities/: default.json
apps/fluux/src-tauri/icons/: generate.sh  icon.icns
apps/fluux/src-tauri/src/: download.rs  e2ee_store.rs  linux_deep_link.rs  linux_tray.rs  main.rs  openpgp.rs  openpgp_backup.rs  openpgp_export.rs  openpgp_storage.rs  upload.rs  window_behavior.rs  xmpp_proxy.rs
apps/fluux/src-tauri/src/mcp/: bridge.rs  mod.rs  protocol.rs  server.rs
apps/fluux/src-tauri/src/notifications/: backend.rs  linux.rs  macos.rs  mod.rs  settings_pane.rs  windows.rs
apps/fluux/src-tauri/src/xmpp_proxy/: dns.rs  framing.rs  happy_eyeballs.rs  mod.rs
assets/: README.md
debian/: changelog  fluux-messenger.desktop  rules
docs/: 2026-06-07-logout-reconnect-hardening-followup.md  2026-06-08-composer-caret-contenteditable-followup.md  2026-06-09-invitation-flow-design.md  2026-06-09-sdk-extensibility-design.md  2026-06-24-render-perf-phase0-baseline.md  2026-06-24-tauri-mobile-android-spike.md  2026-06-25-empty-message-guard-and-chat-marker-display.md  2026-06-26-aurora-theme-audit.md  2026-07-16-e2ee-device-identity-design.md  2026-07-17-mam-catchup-roadmap.md  2026-07-23-fluux-code-review-checklist.md  2026-07-23-scroll-positioning-contract.md  APP_BAR.md  CONNECTION.md  DEMO_MODE.md  DEVELOPER.md  ENCRYPTION.md  LINUX_DEV_ICON.md  MAM_CATCHUP.md  MARKETING_PAGE_DRAFT.md  MCP.md  MEMORY_TROUBLESHOOTING.md  MEP_DESIGN.md  MULTI_ACCOUNT.md  PLUGIN_THEME_ENGINE.md  POLL_PROTOCOL.md  RELEASE.md  ROADMAP_2026.md  SAS_VERIFICATION.md  STRATEGIC_REVIEW.md  THEMES.md  TROUBLESHOOTING.md  URL_SCHEMES.md  UX_REVIEW.md  XEP-APPEARANCE.md  XEP-CONVERSATION_SYNC.md  XEP-IGNORED_USERS.md  XEP-MENTION_ALL.md  XEP-POLL_PROTOCOL.md
docs/examples/: sunset-glow.json
docs/superpowers/plans/: 2026-05-20-import-gpg-secret-key.md  2026-05-22-e2ee-encrypt-metadata-payloads.md  2026-05-22-e2ee-no-silent-plaintext-downgrade.md  2026-06-02-muc-whispers.md  2026-06-03-app-view-selector.md  2026-06-03-unsupported-encryption-fallback-body.md  2026-06-04-muc-composer-render-decoupling.md  2026-06-05-e2ee-events-in-xmpp-log.md  2026-06-05-openpgp-web-key-recovery.md  2026-06-05-perf-stress-ui-harness.md  2026-06-09-muc-presence-row-decoupling.md  2026-06-10-plaintext-reply-encrypted-quote-leak.md  2026-06-11-whisper-continue.md  2026-06-13-macos-notification-click-routing.md  2026-06-14-linux-xclose-quit-no-tray.md  2026-06-16-muc-join-error-handling.md  2026-06-16-muc-join-error-secondary-paths.md  2026-06-16-public-channel-media-autodownload.md  2026-06-17-unified-openpgp-key-export.md  2026-06-18-cached-media-display-when-deferred.md  2026-06-18-mds-read-sync.md  2026-06-18-mds-retract-on-delete.md  2026-06-18-muc-read-sync.md  2026-06-18-reconnect-delayed-message-notifications.md  2026-06-19-display-gated-reconnect.md  2026-06-19-room-header-overflow-kebab.md  2026-06-20-admin-server-overview.md  2026-06-20-trust-state-awaiting-key.md  2026-06-22-admin-user-management-usable-list.md  2026-06-22-mobile-admin-overview-launchpad.md  2026-06-22-own-message-media-autoload.md  2026-06-23-message-view-virtualization.md  2026-06-24-message-bulk-copy.md  2026-06-24-whisper-operation-parity.md  2026-06-25-new-message-marker-session-state.md  2026-06-25-virtualization-scroll-harness-rework.md  2026-06-26-aurora-composer.md  2026-06-26-aurora-message-identity.md  2026-06-26-aurora-p0-foundations.md  2026-06-27-advanced-mode-toggle-placement.md  (+74 more)
docs/superpowers/specs/: 2026-05-21-detachable-chat-windows-design.md  2026-06-02-muc-whispers-design.md  2026-06-03-app-view-selector-design.md  2026-06-03-proxy-jid-domain-stream-errors-design.md  2026-06-03-unsupported-encryption-fallback-body-design.md  2026-06-04-muc-composer-render-decoupling-design.md  2026-06-05-e2ee-events-in-xmpp-log-design.md  2026-06-05-openpgp-web-key-recovery-design.md  2026-06-05-perf-stress-ui-harness-design.md  2026-06-09-muc-presence-row-decoupling-design.md  2026-06-10-plaintext-reply-encrypted-quote-leak-design.md  (+96 more)
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/debian/: changelog  control  copyright  rules
packaging/flatpak/: com.processone.fluux.metainfo.xml  com.processone.fluux.yaml
packaging/rpm/: fluux-messenger.spec
screenshots/: OVERVIEW.md
scripts/: check-linux-packaging.sh  check-sdk-link.mjs  prepare-release.js  rename-release-assets.js  screenshots.ts  scroll-invariants.ts  select-icon-variant.mjs  test-affected.sh  test-deb-build.sh  test-parallel.mjs  ux-screenshots.ts
scripts/blog-hero/: blog-hero-0.17.0.html  blog-hero-0.17.1.html  blog-hero-0.17.2.html  render.mjs  shared.css
scripts/installer-art/: nsis-header.html  nsis-sidebar.html  render.mjs  shared.css  wix-banner.html  wix-dialog.html
scripts/video/: director.ts  helpers.ts  record.ts  storyboard.ts
(+1015 files in other folders)
