[package]
name = "fluux"
version = "0.17.2"
description = "A powerful, productive messaging client that's pleasant to use."
authors = ["ProcessOne"]
license = "AGPL-3.0-or-later"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
# Vertically centers the macOS traffic lights inside the taller app bar
# (components/AppBar.tsx). set_traffic_lights_inset re-applies across resize and
# fullscreen transitions, which a hand-rolled objc2 reposition would not.
tauri-plugin-decorum = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }

# XMPP WebSocket-to-TCP proxy dependencies
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
futures-util = "0.3"
quick-xml = "0.41"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
hickory-resolver = "0.26"
# IDNA (RFC 5890) A-label conversion for internationalized domains. DNS and
# rustls' ServerName accept ASCII names only, so a Unicode domain must be
# punycoded before resolution and the TLS handshake. Already present in the
# dependency tree via hickory-resolver/url; declared here because the proxy
# calls it directly.
idna = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"

# E2EE / OpenPGP (XEP-0373 "OX")
# Sequoia-PGP provides cert generation, encryption, decryption, and
# fingerprinting. `crypto-rust` keeps us on a pure-Rust backend
# (consistent with the rest of the project — ring for rustls, etc.)
# rather than requiring system libnettle or OpenSSL.
sequoia-openpgp = { version = "2.0", default-features = false, features = [
    "crypto-rust",
    "compression-deflate",
    # The RustCrypto backend is not yet production-grade and uses some
    # variable-time operations. Accepting both flags keeps the skeleton
    # building on all three desktop OSs without system libs; a future
    # hardening pass should switch to crypto-openssl on platforms where
    # it is available.
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
] }
anyhow = "1"
base64 = "0.22"

# XEP-0454 media encryption for the native upload path (upload.rs). The
# WebView cannot ship large bodies over IPC without a main-thread stall, so
# file encryption + HTTP PUT both run in Rust; aes-gcm matches the
# WebCrypto AES-256-GCM shape used by the web build (tag appended).
aes-gcm = "0.11"

# Unicode NFKD normalization for the backup passphrase. BIP-39 wordlists
# for non-English languages contain precomposed diacritics that user
# keyboards and copy-paste sources may decompose differently; applying
# NFKD on both encrypt and decrypt guarantees byte-identical KDF input
# regardless of how the text reached us.

[dev-dependencies]
# test-util enables tokio's paused-time test runtime (`#[tokio::test(start_paused = true)]`),
# used to make the Happy Eyeballs connection-racing tests deterministic without real waits.
# Test-only: not pulled into release builds.
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
# Temp dirs for the e2ee_store at-rest KV tests (per-account JSON + 0600 mk files).
tempfile = "3"

# Updater plugin for auto-updates (desktop only)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
# Single-instance guard (desktop only). On Linux a second launch must focus the
# already-running window instead of spawning a duplicate; the plugin acquires a
# per-app lock (D-Bus name on Linux, named mutex on Windows) and forwards the new
# process's argv to the live instance's callback. The `deep-link` feature routes
# an `xmpp:` URL opened while Fluux is running into the existing window rather
# than starting a second copy. macOS already enforces single-instance for the
# app bundle natively, so the plugin is effectively a no-op there.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.13", features = ["blocking"] }
scraper = "0.27"

# user-idle for Windows (macOS uses ioreg, Linux uses direct X11 calls)
[target.'cfg(target_os = "windows")'.dependencies]
user-idle = "0.6"

# ctor for Linux to set env vars before main() - required for WebKitGTK workaround
[target.'cfg(target_os = "linux")'.dependencies]
ctor = "1.0"
x11 = { version = "2", features = ["xlib", "xss"] }
# Read the StatusNotifierWatcher DBus property that tells us whether a system
# tray host will actually display our icon (see src/linux_tray.rs). Pure-Rust
# DBus client — no system lib, no coupling to the pinned GTK/glib versions.
zbus = "5"
# Pinned to the exact version wry resolves so the `PlatformWebview::inner()`
# type unifies (no second copy of the crate). `v2_32` enables
# `WebsiteDataManagerExt::set_network_proxy_settings`, used to force the
# loopback XMPP-bridge hop direct regardless of a system-wide proxy (see
# apply_loopback_proxy_bypass in main.rs).
webkit2gtk = { version = "=2.0.2", features = ["v2_32"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSNotification", "NSString", "NSThread", "NSProcessInfo", "NSDictionary", "NSArray", "NSError", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-user-notifications = { version = "0.3", features = ["UNUserNotificationCenter", "UNNotificationContent", "UNNotificationRequest", "UNNotificationResponse", "UNNotification", "UNNotificationTrigger", "UNNotificationAttachment", "UNNotificationSettings", "UNError", "block2"] }
block2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"  # Use debuginfo instead of true to keep symbols needed by Tauri updater
